Fix FST Index test